# rag-shared

./: README.md  pyproject.toml
src/rag_shared/: __init__.py  dragonfly.py  logging.py  observability.py
tests/: test_logging.py
